[package]
name = "transfrom-to-webp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.5.0"
actix-web = "4.3.0"
base64 = "0.21.0"
dotenvy = "0.15.6"
futures = "0.3.26"
futures-util = "0.3.26"
json = "0.12.4"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
sanitize-filename = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tera = "1.17.1"
tokio = "1.25.0"
tokio-util = { version = "0.7.7", features = ["codec"] }
uuid = { version = "1.3.0", features = ["v4"] }
